--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -22,26 +22,26 @@
 <!DOCTYPE resources [<!ENTITY APP_NAME "NeverTooManyBooks">]>
 <!-- Quotes „…“ - Regex to find wrong ones: ('|”|‘|’|«|») -->
 <!--suppress LongLine -->
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <plurals name="displaying_n_books"
-             tools:ignore="MissingQuantity">
+<resources>
+    <plurals name="displaying_n_books">
         <item quantity="one">Zobrazuji %1$d knihu</item>
         <item quantity="few">Zobrazuji %1$d knihy</item>
         <item quantity="other">Zobrazeno %1$d knih</item>
+        <item quantity="many">Zobrazeno %1$d knih</item>
     </plurals>
 
-    <plurals name="n_books_found"
-             tools:ignore="MissingQuantity">
+    <plurals name="n_books_found">
         <item quantity="one">Nalezena %1$d kniha</item>
         <item quantity="few">Nalezeno %1$d knih</item>
         <item quantity="other">Nalezeno %1$d knih</item>
+        <item quantity="many">Nalezeno %1$d knih</item>
     </plurals>
 
-    <plurals name="n_stars"
-             tools:ignore="MissingQuantity">
+    <plurals name="n_stars">
         <item quantity="one">%1$s hvězda</item>
         <item quantity="few">%1$s hvězdičky</item>
         <item quantity="other">%1$s hvězd</item>
+        <item quantity="many">%1$s hvězd</item>
     </plurals>
 
     <string name="X_acra_resToastText">Došlo k neočekávanému pádu aplikace &APP_NAME;. Prosím pomozte nám zlepšit aplikaci a informujte nás o tomto problému.</string>
