--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -21,33 +21,29 @@
 
 <!--
   WORK IN PROGRESS
---><!DOCTYPE resources [
+-->
+<!DOCTYPE resources [
     <!ENTITY APP_NAME "NeverTooManyBooks">
     ]>
-<!-- Quotes «…» - Regex to find wrong ones: ('|„|‘|’|“|”) --><!--suppress LongLine -->
+<!-- Quotes «…» - Regex to find wrong ones: ('|„|‘|’|“|”) -->
+<!--suppress LongLine -->
 <resources xmlns:tools="http://schemas.android.com/tools"
            tools:locale="pt">
 
     <!-- region ========== Plurals. -->
     <!-- displayed in the header of booklist -->
-    <plurals name="displaying_n_books"
-             tools:ignore="MissingTranslation">
-        <item quantity="zero">No books</item>
+    <plurals name="displaying_n_books">
         <item quantity="one">%1$d book displayed</item>
         <item quantity="other">Displaying %1$d books</item>
     </plurals>
 
-    <plurals name="n_books_found"
-             tools:ignore="MissingTranslation">
-        <item quantity="zero">No books found</item>
+    <plurals name="n_books_found">
         <item quantity="one">%1$d book found</item>
         <item quantity="other">%1$d books found</item>
     </plurals>
 
     <!-- Short text for 'n stars' -->
-    <plurals name="n_stars"
-             tools:ignore="MissingTranslation">
-        <item quantity="zero">%1$s stars</item>
+    <plurals name="n_stars">
         <item quantity="one">%1$s star</item>
         <item quantity="other">%1$s stars</item>
     </plurals>
