--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -734,4 +734,5 @@
     <string name="info_purge_blns_all">Vymažte stav uzlu ze všech seznamů</string>
     <string name="info_purge_blns_item_name">Vymazat stav uzlu %1$s „%2$s“?</string>
     <string name="error_updates_aborted">Aktualizace přerušeny</string>
+    <string name="lbl_country">Země</string>
 </resources>
