--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -736,4 +736,5 @@
     <string name="info_purge_blns_all">Effacer l\'état du nœud de toutes les listes</string>
     <string name="info_purge_blns_item_name">Effacer l\'état du nœud de %1$s «%2$s» ?</string>
     <string name="error_updates_aborted">Mises à jour annulées</string>
+    <string name="lbl_country">Pays</string>
 </resources>
