--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -732,4 +732,5 @@
     <string name="info_purge_blns_all">Cancella lo stato del nodo da tutti gli elenchi</string>
     <string name="info_purge_blns_item_name">Cancellare lo stato del nodo di %1$s “%2$s”?</string>
     <string name="error_updates_aborted">Aggiornamenti interrotti</string>
+    <string name="lbl_country">Paese</string>
 </resources>
