--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -734,4 +734,5 @@
     <string name="info_purge_blns_all">Wyczyść stan węzła ze wszystkich list</string>
     <string name="info_purge_blns_item_name">Wyczyścić stan węzła %1$s „%2$s”?</string>
     <string name="error_updates_aborted">Aktualizacje przerwane</string>
+    <string name="lbl_country">Kraj</string>
 </resources>
