--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -734,4 +734,5 @@
     <string name="info_purge_blns_all">Очистить состояние узла из всех списков</string>
     <string name="info_purge_blns_item_name">Очистить состояние узла %1$s «%2$s»?</string>
     <string name="error_updates_aborted">Обновления прерваны</string>
+    <string name="lbl_country">Страна</string>
 </resources>
