--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -728,4 +728,5 @@
     <string name="info_purge_blns_all">Düğüm durumunu tüm listelerden temizle</string>
     <string name="info_purge_blns_item_name">%1$s “%2$s” düğüm durumu temizlensin mi?</string>
     <string name="error_updates_aborted">Güncellemeler iptal edildi</string>
+    <string name="lbl_country">Ülke</string>
 </resources>
