--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -18,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources>
@@ -478,9 +480,9 @@
     <string name="list_and">y</string>
     <string name="list_element">• %s</string>
     <string name="size_megabytes">%1$.2fMB</string>
-    <string name="option_amazon_books_by_author">Libros del mismo autor</string>
-    <string name="option_amazon_books_by_author_in_series">Libros del autor/serie</string>
-    <string name="option_amazon_books_in_series">Libros de la misma serie</string>
+    <string name="option_shop_books_by_author">Libros del mismo autor</string>
+    <string name="option_shop_books_by_author_in_series">Libros del autor/serie</string>
+    <string name="option_shop_books_in_series">Libros de la misma serie</string>
     <string name="option_author_details">Todas las obras de este autor</string>
     <string name="option_author_works_book">Solo libros</string>
     <string name="option_author_works_toc">Solo títulos de contenido</string>
