--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -415,21 +415,6 @@
     <string name="style_builtin_author_series">Author, Series</string>
     <string name="style_builtin_author_year">Author, Year</string>
     <string name="style_builtin_compact">Compact</string>
-    <string name="style_builtin_bookshelf" translatable="false">@string/lbl_bookshelf</string>
-    <string name="style_builtin_date_acquired" translatable="false">@string/lbl_date_acquired</string>
-    <string name="style_builtin_date_added" translatable="false">@string/lbl_date_added</string>
-    <string name="style_builtin_date_last_updated" translatable="false">@string/lbl_date_last_updated</string>
-    <string name="style_builtin_date_published" translatable="false">@string/lbl_date_published</string>
-    <string name="style_builtin_date_read" translatable="false">@string/lbl_date_read</string>
-    <string name="style_builtin_1st_char_book_title" translatable="false">@string/lbl_group_1st_char_book_title</string>
-    <string name="style_builtin_format" translatable="false">@string/lbl_format</string>
-    <string name="style_builtin_genre" translatable="false">@string/lbl_genre</string>
-    <string name="style_builtin_language" translatable="false">@string/lbl_language</string>
-    <string name="style_builtin_lending" translatable="false">@string/lbl_lending</string>
-    <string name="style_builtin_location" translatable="false">@string/lbl_location</string>
-    <string name="style_builtin_rating" translatable="false">@string/lbl_rating</string>
-    <string name="style_builtin_read_and_unread" translatable="false">@string/lbl_group_read_and_unread</string>
-    <string name="style_builtin_series" translatable="false">@string/lbl_series</string>
     <!-- endregion -->
     <!-- region ========== Style terminology. -->
     <!-- Single Style -->
@@ -463,7 +448,6 @@
     <string name="lbl_edition_first_edition">First Edition</string>
     <string name="lbl_edition_first_impression">First impression</string>
     <string name="lbl_edition_limited">Limited</string>
-    <string name="lbl_edition_signed" translatable="false">@string/lbl_signed</string>
     <string name="lbl_edition_slipcase">Slipcase</string>
     <string name="lbl_edition_book_club">Bookclub edition</string>
     <!-- endregion -->
@@ -559,10 +543,7 @@
     <!-- Cover image context menu option -->
     <string name="option_cover_rotate_ccw">Anti-Clockwise</string>
     <!-- Cover image context menu option -->
-    <string name="option_cover_rotate_180" translatable="false">180°</string>
     <!-- Booklist FAB menu option -->
-    <string name="option_fab_add_book_by_barcode_scan">Scan Barcode</string>
-    <string name="option_fab_add_book_by_barcode_scan_batch">Scan Barcodes in batch</string>
     <!-- Booklist FAB menu option -->
     <string name="option_fab_add_book_by_isbn">Enter ISBN</string>
     <!-- Booklist FAB menu option -->
@@ -578,7 +559,6 @@
     <!-- whether an action will only apply to the current bookshelf. -->
     <string name="btn_just_this_shelf">This shelf only</string>
     <!-- Start the barcode scanner for a single scan (one book). -->
-    <string name="option_barcode_scan">Scan barcode</string>
     <!-- Start the barcode scanner for a continuous scanning (multiple books). -->
     <string name="option_barcode_scan_continuous">Scan continuously</string>
     <!-- Whether to enforce strict ISBN numbers when searching etc...  -->
@@ -588,7 +568,6 @@
     <!-- Whether a book can be updated without user-permission. -->
     <string name="option_auto_updates">Allow automatic updates from the internet.</string>
     <string name="option_import">Import</string>
-    <string name="option_backup_and_export" translatable="false">@string/title_backup_and_export</string>
     <string name="option_download_set_folder">Set the download folder</string>
     <string name="option_download_folder">Local download folder</string>
     <string name="option_download_ebook_format">Download eBook (%1$s)</string>
@@ -712,7 +691,6 @@
     <string name="action_start_export">Start export</string>
     <string name="action_synchronize">Synchronize</string>
     <!-- Small screens. Ideally 3-5 characters long. -->
-    <string name="action_show_toc" translatable="false">@string/lbl_table_of_content_short</string>
     <!-- Large screens; max 25 chars -->
     <string name="action_show_toc_long">Show Table Of Content</string>
     <!-- endregion -->
@@ -773,7 +751,6 @@
     <!-- Author types -->
     <string name="lbl_author_type">Author type</string>
     <!-- Author. Whether the user considers his collection of this Author to be complete. -->
-    <string name="lbl_author_is_complete" translatable="false">@string/lbl_is_complete</string>
     <string name="lbl_author_pseudonym">This is a pen-name of:</string>
     <!-- A single Series. -->
     <string name="lbl_series">Series</string>
@@ -782,11 +759,10 @@
     <!-- The book's number in a series. Either a symbol (e.g. '#') or a very short label (e.g. 'Nr') -->
     <string name="lbl_series_num">#</string>
     <!-- Series. Whether the user considers his collection of this Series to be complete. -->
-    <string name="lbl_series_is_complete" translatable="false">@string/lbl_is_complete</string>
     <!-- A single Publisher. -->
-    <string name="lbl_publisher">Publisher</string>
+    <string name="lbl_publisher">Editor</string>
     <!-- Multiple Publishers. -->
-    <string name="lbl_publishers">Publishers</string>
+    <string name="lbl_publishers">Editores</string>
     <!-- A single Bookshelf. -->
     <string name="lbl_bookshelf">Bookshelf</string>
     <!-- Multiple Bookshelves. -->
@@ -796,7 +772,6 @@
     <!-- Multiple Book. -->
     <string name="lbl_books">Books</string>
     <string name="lbl_book_type">Book type</string>
-    <string name="lbl_book_type_book" translatable="false">@string/lbl_book</string>
     <string name="lbl_book_type_anthology">Anthology</string>
     <string name="lbl_book_type_collection">Collection</string>
     <!-- Single book cover - Short label. -->
@@ -817,7 +792,7 @@
     <string name="info_x_pages" tools:ignore="PluralsCandidate">%1$d pages</string>
     <string name="lbl_currency">Currency</string>
     <string name="lbl_price_listed">List Price</string>
-    <string name="lbl_price_paid">Price paid</string>
+    <string name="lbl_price_paid">Preço pago</string>
     <string name="lbl_rating">Rating</string>
     <string name="lbl_format">Format</string>
     <!-- [VERIFIED] -->
@@ -835,7 +810,7 @@
     <!-- long label for the Location field -->
     <string name="lbl_location_long">Location of the book</string>
     <!-- Header for a screen section. -->
-    <string name="lbl_publication">Publication</string>
+    <string name="lbl_publication">Publicação</string>
     <!-- Number of books printed of this edition. -->
     <string name="lbl_print_run">Print run</string>
     <!-- Book edition -->
@@ -878,8 +853,8 @@
     <string name="lbl_date_acquired_day">Day Acquired</string>
     <!-- Publication Date for the book. -->
     <string name="lbl_date_published">Date Published</string>
-    <string name="lbl_date_published_year">Publication Year</string>
-    <string name="lbl_date_published_month">Publication Month</string>
+    <string name="lbl_date_published_year">Ano de Publicação</string>
+    <string name="lbl_date_published_month">Mês de Publicação</string>
     <!-- First Publication Date for the CONTENT of the book. (e.g. magazine pub... etc... -->
     <string name="lbl_date_first_publication">First Publication</string>
     <string name="lbl_date_first_publication_year">First Pub. Year</string>
@@ -919,7 +894,6 @@
     <string name="info_export_successful">Export successful</string>
     <!-- progress final message - displayed when a Backup is done: 1: folder; 2: filename; 3: file size -->
     <string name="info_export_report">A %3$s file called “%2$s” was created in the “%1$s” folder and you should manually copy it elsewhere to protect the data in case your device is damaged, lost, or stolen.</string>
-    <string name="info_backup_email_subject" translatable="false">@string/lbl_backup</string>
     <!-- Dialog import all options. -->
     <string name="lbl_import_options">Select what will be imported.</string>
     <!-- Radio button text -->
@@ -952,10 +926,7 @@
     <string name="preference_not_set">Não definido</string>
     <!-- Preference Category -->
     <string name="pc_ui">User Interface</string>
-    <string name="pc_search" translatable="false">@android:string/search_go</string>
     <string name="pc_formatting">Formatting</string>
-    <string name="pc_sorting" translatable="false">@string/lbl_sorting</string>
-    <string name="pc_edit" translatable="false">@string/action_edit</string>
     <string name="pc_bob">Booklists</string>
     <string name="pc_lists">Lists</string>
     <!-- [VERIFIED] -->
@@ -964,13 +935,10 @@
     <!-- [VERIFIED] -->
     <string name="pc_camera">Câmera</string>
     <!-- Opens a new screen with the related settings. -->
-    <string name="pt_website_search_order_and_enable">Reorder, enable &amp; disable</string>
-    <string name="pt_covers" translatable="false">@string/lbl_covers_long</string>
+    <string name="pt_website_search_order_and_enable">Prioridade, habilitar &amp; desabilitar</string>
     <string name="pt_barcode_scanner">Barcode scanner</string>
-    <string name="pt_calibre_content_server" translatable="false">@string/lbl_calibre_content_server</string>
     <string name="pt_storage_volume">Storage volume</string>
     <string name="pt_maintenance">Maintenance</string>
-    <string name="pt_more" translatable="false">@string/action_more_ellipsis</string>
     <string name="pt_field_visibility">Field Visibility</string>
     <string name="ps_manage_fields">Selected fields are visible in the add/edit book screens. Unselected fields are hidden.</string>
     <!-- SwitchPreference - How to display titles. -->
@@ -997,7 +965,6 @@
          Allow the user to lookup books using such an ID, and manually modify them. -->
     <string name="pt_allow_editing_external_id">Allow editing website book id</string>
     <!-- SwitchPreference - Enable or disable all lending functionality. -->
-    <string name="pt_lending_enabled" translatable="false">@string/lbl_lending</string>
     <!-- SwitchPreference - beep when the barcode scanner found a valid code -->
     <string name="pt_scanning_beep_on_barcode_found">Beep when a barcode is found</string>
     <!-- SwitchPreference -->
@@ -1055,7 +1022,6 @@
     <string name="pe_bob_row_menu_long_click">Always use long-click.</string>
     <!-- ListPreference: the popup bubble displayed while scrolling through a booklist. -->
     <string name="pt_fast_scroller_overlay">Text bubble while scrolling.</string>
-    <string name="pe_fast_scroller_overlay_none" translatable="false">@string/none</string>
     <string name="pe_fast_scroller_overlay_static">Static</string>
     <string name="pe_fast_scroller_overlay_dynamic">Dynamic</string>
     <!-- ListPreference - Degrees by which to rotate camera pictures automatically -->
@@ -1063,7 +1029,6 @@
     <!-- ListPreference - the user can choose which action to take after taking a picture -->
     <string name="camera_next_action">Action after taking a picture</string>
     <!-- ListPreference - shows a list of cameras of the device by lens-facing -->
-    <string name="pt_camera_lens_facing" translatable="false">@string/pc_camera</string>
     <!-- [VERIFIED] -->
     <string name="pe_camera_front">Câmera frontal</string>
     <!-- [VERIFIED] -->
@@ -1095,10 +1060,8 @@
     <!-- Explanatory note for the bug report. -->
     <string name="debug_send_info_text">This will create a backup copy of your database as well as any log files and send it to the developers. If you do not wish to send any of these files, delete them from the mail attachments before sending.</string>
     <!-- The user can choose which files to include. -->
-    <string name="option_bug_report_database" translatable="false">@string/lbl_database</string>
     <string name="option_bug_report_database_upgrade">Database upgrade files</string>
     <string name="option_bug_report_logfiles">Log files</string>
-    <string name="option_bug_report_settings" translatable="false">@string/lbl_settings</string>
     <!-- the hint text for the input field on the SQLite Shell page. -->
     <string name="lbl_sql_query">SQL query</string>
     <!-- endregion -->
@@ -1201,11 +1164,10 @@
     <!-- Edit book: Name of the 'Details' tab -->
     <string name="lbl_tab_details">Details</string>
     <!-- Edit book: Name of the 'Publication' tab. -->
-    <string name="lbl_tab_publication">Publication</string>
+    <string name="lbl_tab_publication">Publicação</string>
     <!-- Edit book: Name of the 'Notes' tab.-->
     <string name="lbl_tab_notes">Notes</string>
     <!-- Edit book: Name of the 'Table Of Content' tab. -->
-    <string name="lbl_tab_table_of_content" translatable="false">@string/lbl_table_of_content_short</string>
     <!-- Edit book: Name of the 'External website id' tab.-->
     <string name="lbl_tab_lbl_ext_id">External ID</string>
     <!-- SearchAdmin page: Name of the 'Alternative Editions' tab. -->
@@ -1237,7 +1199,6 @@
     <string name="list_and">and</string>
     <!-- endregion -->
     <!-- region ========== Other labels - TODO: needs cleaning up... -->
-    <string name="lbl_add_book_by_external_id" translatable="false">@string/option_fab_add_book_by_external_id</string>
     <string name="lbl_local_search">Local Search</string>
     <string name="lbl_local_search_long">Advanced Local Search</string>
     <!-- Search on keywords entered. -->
@@ -1333,5 +1294,7 @@
     <string name="lbl_strip_info_mapped_bookshelf_wishlist">Wishlist mapped bookshelf</string>
     <string name="lbl_strip_info_mapped_bookshelf_owned_books">Owned books mapped bookshelf</string>
     <string name="lbl_country">País</string>
+    <string name="pt_search_show_shopping_options">Padronizar</string>
+    <string name="lbl_standardize">Padronizar</string>
     <!--    <string name="confirm_strip_info_import_collection">Do you want to import all your books? This could take some time. We strongly advice to take a backup before proceeding!</string>-->
 </resources>
