--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -77,7 +78,7 @@
     <string name="action_show_all">Mostrar tudo</string>
     <string name="action_skip">Pular</string>
     <string name="and_others">%1$s …</string>
-    <string name="and_others_plus">%1$s … <small>[+%2$d]</small></string>
+    <string name="and_others_plus"><![CDATA[%1$s … <small>[+%2$d]</small>]]></string>
     <string name="bob_empty_field">(Vazio)</string>
     <string name="cancelled">Cancelado</string>
     <string name="debug_email_body">Por favor reserve algum tempo para descrever brevemente o problema que encontrou.</string>
