--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -473,6 +474,7 @@
     <string name="option_author_works_book">Livres seulement</string>
     <string name="option_author_works_toc">Titres de contenu uniquement</string>
     <string name="title_backup_and_export">Sauvegarde et exportation</string>
+    <string name="btn_this_node_only">Ce nœud uniquement</string>
     <string name="option_barcode_scan">Scan code à barres</string>
     <string name="option_barcode_scan_continuous">Scanner en continu</string>
     <string name="option_book_sync_list_with_details">Synchroniser/positionner la liste</string>
