--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -469,6 +470,7 @@
     <string name="option_author_works_book">Μόνο βιβλία</string>
     <string name="option_author_works_toc">Μόνο τίτλοι περιεχομένου</string>
     <string name="title_backup_and_export">Δημιουργία αντιγράφων ασφαλείας και εξαγωγή</string>
+    <string name="btn_this_node_only">Μόνο αυτός ο κόμβος</string>
     <string name="option_barcode_scan">Σάρωση γραμμωτού κώδικα</string>
     <string name="option_barcode_scan_continuous">Σάρωση συνεχώς</string>
     <string name="option_book_sync_list_with_details">Συγχρονισμός/τοποθέτηση της λίστας</string>
