--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -483,6 +484,7 @@
     <string name="option_author_works_book">Solo libros</string>
     <string name="option_author_works_toc">Solo títulos de contenido</string>
     <string name="title_backup_and_export">Copia de seguridad y exportación</string>
+    <string name="btn_this_node_only">Este nodo solo</string>
     <string name="option_barcode_scan">Escanear código de barras</string>
     <string name="option_barcode_scan_continuous">Escanear continuamente</string>
     <string name="option_book_sync_list_with_details">Sincronizar/posicionar la lista</string>
