--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -469,6 +470,7 @@
     <string name="option_author_works_book">Solo libri</string>
     <string name="option_author_works_toc">Solo titoli di contenuti</string>
     <string name="title_backup_and_export">Backup ed esportazione</string>
+    <string name="btn_this_node_only">Solo questo nodo</string>
     <string name="option_barcode_scan">Scansione codice a barre</string>
     <string name="option_barcode_scan_continuous">Scansiona continuamente</string>
     <string name="option_book_sync_list_with_details">Sincronizza/posiziona la lista</string>
