--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -482,6 +483,8 @@
     <string name="option_author_works_book">Tylko książki</string>
     <string name="option_author_works_toc">Tylko tytuły treści</string>
     <string name="title_backup_and_export">Kopia zapasowa i eksport</string>
+    <string name="btn_this_node_only">Tylko ten węzeł</string>
+    <string name="btn_this_node_only">Tylko ten węzeł</string>
     <string name="option_barcode_scan">Zeskanuj kod kreskowy</string>
     <string name="option_barcode_scan_continuous">Skanuj w sposób ciągły</string>
     <string name="option_book_sync_list_with_details">Synchronizuj/ustaw listę</string>
