--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -485,6 +486,7 @@
     <string name="option_author_works_book">Только книги</string>
     <string name="option_author_works_toc">Только заголовки контента</string>
     <string name="title_backup_and_export">Резервное копирование и экспорт</string>
+    <string name="btn_this_node_only">Только этот узел</string>
     <string name="option_barcode_scan">Сканирование штрих-кода</string>
     <string name="option_barcode_scan_continuous">Сканирование непрерывно</string>
     <string name="option_book_sync_list_with_details">Синхронизировать/позиционировать список</string>
