--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -475,6 +476,8 @@
     <string name="option_author_works_book">Sadece kitaplar</string>
     <string name="option_author_works_toc">Yalnızca içerik başlıkları</string>
     <string name="title_backup_and_export">Yedekleme ve Dışa Aktarma</string>
+    <string name="btn_this_node_only">Bu düğüm sadece</string>
+    <string name="btn_this_node_only">Bu düğüm sadece</string>
     <string name="option_barcode_scan">Barkod tara</string>
     <string name="option_barcode_scan_continuous">Sürekli tara</string>
     <string name="option_book_sync_list_with_details">Listeyi senkronize edin/konumlandırın</string>
